--- a/UT1/index.html
+++ b/UT1/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/Act12_MiguelGordon.js"></script>
+    <script src="js/PROGS_Act2_MiguelGordon.js"></script>
 </body>
 </html>
