--- a/UT2/html/11.indexBom.html
+++ b/UT2/html/11.indexBom.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/Act26_MiguelGordon.js"></script>
+    <button id="idGeo">Geolocalización</button>
+    <br><br><br>
+    <script src="../js_theory/11.bomProperties.js"></script>
 </body>
 </html>
