--- a/practisingUT1/index.html
+++ b/practisingUT1/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/Act26_MiguelGordon.js"></script>
+    <script src="js/38.js"></script>
 </body>
 </html>
