--- a/UT2/index.html
+++ b/UT2/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Actividades</title>
 </head>
 <body>
-    <script src="js/Act26_MiguelGordon.js"></script>
+    <script src="js/Act1_MiguelGordon.js"></script>
 </body>
 </html>
