--- a/UT3/theory/2.cookie.html
+++ b/UT3/theory/2.cookie.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actividades</title>
+    <title>Document</title>
 </head>
 <body>
-    <script src="js/Act10_MiguelGordon.js"></script>
+    <script src="js/2.cookie.js"></script>
 </body>
 </html>
