Subida de ejercicios

--- a/UT3/theory/6.callback.html
+++ b/UT3/theory/6.callback.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/Act2_1_MiguelGordon.js"></script>
+    <script src="js/6.callback.js"></script>
 </body>
 </html>
