--- a/UT3/theory/5.sessionStorageJSON.html
+++ b/UT3/theory/5.sessionStorageJSON.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="js/Act2_1_MiguelGordon.js"></script>
+    <script src="js/5.localStorageJSON.js"></script>
 </body>
 </html>
