--- a/UT3/activities/index.html
+++ b/UT3/activities/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Actividades</title>
 </head>
 <body>
-    <script src="js/Act2_2_MiguelGordon.js"></script>
+    <script src="js/Act3_MiguelGordon.js"></script>
 </body>
 </html>
